# OgreOculusSample

./: CMakeLists.txt  Readme.md  main.cpp  plugins.cfg  plugins_d.cfg  resources.cfg
cfg/: plugins.cfg  plugins_d.cfg  resources.cfg
cmake/: FindOGRE.cmake  FindOculusSDK.cmake  FindPkgMacros.cmake  FindUDEV.cmake  PostInstall.cmake  PreprocessorUtils.cmake
include/: App.h  Globals.h  Rift.h  Scene.h
media/: Cube2.mesh  Material.material  Material2.material  Oculus.material  OculusDistortionFragment.glsl  OculusDistortionVertex.glsl
src/: App.cpp  Globals.cpp  Rift.cpp  Scene.cpp  main.cpp
